--- a/src/main/resources/templates/html/user/userEdit.html
+++ b/src/main/resources/templates/html/user/userEdit.html
@@ -66,15 +66,12 @@ $(function(){
    		//修改
    		$(".top_page_name").text("修改个人信息");
    		//回填值
-   		$("#userId").val(manageUser.userId);
-   		$("#userName").val(manageUser.userName);
-   		$("#userTel").val(manageUser.userTel);
-   		$("#position").val(manageUser.position);
-   		$("#userBirthday").val(getTime(manageUser.userBirthday));
-   		$(":radio[name='userSex'][value='"+manageUser.userSex+"']").attr("checked", "checked");
-   		$("#userMail").val(manageUser.userMail);
-   		$("#userAddress").val(manageUser.userAddress);
-   		$("#userIdcard").val(manageUser.userIdcard);
+   		$("#id").val(manageUser.id);
+   		$("#name").val(manageUser.name);
+   		$("#phone").val(manageUser.phone);
+   		$("#email").val(manageUser.email);
+   		$("#idCard").val(manageUser.idCard);
+   		$("#post").val(manageUser.post);
    	}
 	//验证数字长度
 	$.validator.addMethod(
@@ -123,41 +120,37 @@ $(function(){
 		debug:true,
 	    /**//* 设置验证规则 */    
 	    rules: {
-	        userName: {     
+	        name: {
 	            required:true,
 	            rangelength:[2, 20],
 	            onlyName:true
 	        },
-	        userTel: {
+	        phone: {
 	        	required:true,
 	        	mobilephone:11
 	        },
-	        userMail: {
+	        email: {
 	        	//required:true,
 	        	email:true,
 	        	maxlength:100
 	        },
-	        userAddress: {
-	        	//required:true,
-	        	maxlength:100
-	        },
-	        userIdcard: {
+	        Idcard: {
 	        	required:true,
 	        	 rangelength:[18, 18],
 	        }
 	    },      
 	    /**//* 设置错误信息 */    
 	    messages: {     
-	        userName: {         
+	        name: {
 	        	required:"姓名不可为空",
 	        	rangelength:"姓名必须在2-20个字符之间",
 	        	onlyName:"请输入正确的姓名(中文,数字,字母)"
 	        },
-	        userTel: {
+	        phone: {
 	        	required:"移动电话号码不可为空",
 	        	mobilephone:"请输入正确的手机号码"
 	        },
-	        userMail: {
+			email: {
 	        	email:"请输入正确的邮箱",
 	        	maxlength:"最多100个字符"
 	        },
@@ -200,20 +193,11 @@ function closeSelf(){
 //保存
 function save(){
 	var param = new Object();
-	param.userName = $.trim($("#userName").val());
-	param.userTel = $.trim($("#userTel").val());
-	var time = $("#userBirthday").val();
-	if(time!=null && time!=''){		
-		time = time.split('-');
-		var myTime = new Date(time[0],(time[1]-1),time[2]);
-		param.userBirthday = myTime;
-	}
-	param.userMail = $.trim($("#userMail").val());
-	param.userAddress = $.trim($("#userAddress").val());
-	param.userSex = $(":radio[name='userSex']:checked").val();
-	param.position = $.trim($("#position").val());
-	param.dept = $.trim($("#dept").val());
-	param.userIdcard = $("#userIdcard").val();
+	param.name = $.trim($("#name").val());
+	param.phone = $.trim($("#phone").val());
+	param.email = $.trim($("#email").val());
+	param.idCard = $.trim($("#idCard").val());
+	param.post = $("#post").val();
 	
 	var urlStr = "/user/updateUser";
 	if(manageUser){
@@ -253,10 +237,10 @@ function save(){
 			<tr>
 				<td align="right" >
 					<span class="need_0">*</span>
-					<span class="text_ad_0">账号：</span>
+					<span class="text_ad_0">姓名：</span>
 				</td>
 				<td>
-					<input id="userId" type="text" name="userId" class="input_0" readonly="readonly" disabled="disabled" />
+					<input id="name" type="text" name="name" class="input_0"/>
 					<span class="validation_span"></span>
 				</td>
 			</tr>
@@ -264,43 +248,21 @@ function save(){
 			<tr>
 				<td align="right" >
 					<span class="need_0">*</span>
-					<span class="text_ad_0">姓名：</span>
+					<span class="text_ad_0">联系电话：</span>
 				</td>
 				<td>
-					<input id="userName" type="text" name="userName" class="input_0" />
+					<input id="phone" type="text" name="phone" class="input_0" />
 					<span class="validation_span"></span>
 				</td>
 			</tr>
-			<tr>
-				<td align="right" >
-					<span class="need_0">*</span>
-					<span class="text_ad_0">性别：</span>
-				</td>
-				<td>
-					<input type="radio" id="userSex1" name="userSex" value="1" checked="checked" style="vertical-align:middle;" />
-					<span style="vertical-align:middle;" >男</span>
-					<input type="radio" id="userSex2" name="userSex" value="0" style="margin-left:10px;vertical-align:middle;" />
-					<span style="vertical-align:middle;" >女</span>
-					<span class="validation_span"></span>
-				</td>
-			</tr>
-			<tr style="">
-				<td align="right" >
-					<span class="need_0"></span>
-					<span class="text_ad_0">出生日期：</span>
-				</td>
-				<td>
-					<input id="userBirthday" type="text" name="userBirthday" class="input_0" value=""/>
-					<span class="validation_span"></span>
-				</td>
-			</tr>
+
 			<tr style="">
 				<td align="right" >
 				    <span class="need_0">*</span>
 					<span class="text_ad_0">身份证号：</span>
 				</td>
 				<td>
-					<input id="userIdcard" type="text" name="userIdcard" class="input_0" value="" />
+					<input id="idCard" type="text" name="idCard" class="input_0" value="" />
 					<span class="validation_span"></span>
 				</td>
 			</tr>
@@ -309,17 +271,7 @@ function save(){
 					<span class="text_ad_0">职位：</span>
 				</td>
 				<td>
-					<input id="position" type="text" name="position" class="input_0" value="" />
-					<span class="validation_span"></span>
-				</td>
-			</tr>
-			<tr>
-				<td align="right" >
-					<span class="need_0">*</span>
-					<span class="text_ad_0">移动电话：</span>
-				</td>
-				<td>
-					<input id="userTel" type="text" name="userTel" class="input_0" />
+					<input id="post" type="text" name="post" class="input_0" value="" />
 					<span class="validation_span"></span>
 				</td>
 			</tr>
@@ -328,16 +280,7 @@ function save(){
 					<span class="text_ad_0">邮箱：</span>
 				</td>
 				<td>
-					<input id="userMail" type="text" name="userMail" class="input_0" />
-					<span class="validation_span"></span>
-				</td>
-			</tr>
-			<tr style="">
-				<td align="right" >
-					<span class="text_ad_0">地址：</span>
-				</td>
-				<td>
-					<input id="userAddress" type="text" name="userAddress" class="input_0" value="" />
+					<input id="email" type="text" name="email" class="input_0" />
 					<span class="validation_span"></span>
 				</td>
 			</tr>
