--- a/src/main/resources/templates/html/sa/word.html
+++ b/src/main/resources/templates/html/sa/word.html
@@ -17,6 +17,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
     <link type="text/css" rel="stylesheet" th:href="@{/plug/layui/css/layui.css}"  media="all"/>
     <script type="text/javascript" th:src="@{/plug/layui/layui.js}"  charset="utf-8"></script>
 
+    <!-- validation -->
+    <script type="text/javascript" th:src="@{/js/jquery/jquery.validate.js}" ></script>
+
     <link type="text/css" rel="stylesheet" th:href="@{/js/layer/skin/layer.css}"/>
     <script type="text/javascript" th:src="@{/js/layer/layer.js}" ></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -78,7 +81,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
         <tr style="">
             <main>
                 <div class="grid-container">
-                    <div class="grid-width-100">
+                    <div class="grid-width-100" style="height: 40%">
                         <textarea name="editor" id="editor"/></textarea>
                     </div>
                 </div>
@@ -88,8 +91,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
         <tr>
             <td colspan="2" align="left" >
                 <div style="margin-top:10px;margin-bottom:20px;margin-left:120px;">
-                    <input type="button" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="保存" style="" />
-                    <input type="button" class="layui-btn" lay-submit="" lay-filter="add" id="backBtu" name="backBtu" value="返回" style="margin-left:20px;" />
+                    <input type="submit" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="发布" style="" />
                 </div>
             </td>
         </tr>
@@ -101,18 +103,35 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
         CKEDITOR.replace('editor');
         editorElement =  CKEDITOR.document.getById( 'editor' );
         // 4、给CKEditor赋值
-        CKEDITOR.instances.editor.setData("要显示的文字内容");
+        CKEDITOR.instances.editor.setData("请填写文字内容");
     });
 
-    //返回按钮
-    $("#saveBtu").click(function(){
-        save();
-    });
-    //返回按钮
-    $("#backBtu").click(function(){
-        layer.confirm('确认返回吗？', {icon: 3, title:'提示'}, function(index){
-            parent.layer.closeAll();
-        });
+    $('form').validate({
+        debug:true,
+        /**//* 设置验证规则 */
+        rules: {
+            title: {
+                required:true
+            }
+        },
+        /**//* 设置错误信息 */
+        messages: {
+            title: {
+                required:"标题不可为空"
+            }
+        },
+        /**//* 设置验证触发事件 */
+        onsubmit:true,
+        /**//* 设置错误信息提示DOM */
+        errorPlacement: function(error, element) {
+            $(element[0]).parent().find(".validation_span").text(error.html()).show();
+        },
+        success:function(error, element){
+            $(element[0]).parent().find(".validation_span").text("");
+        },
+        submitHandler: function (){
+            save();
+        }
     });
 
     //保存
@@ -136,18 +155,20 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
                 success:function(data){
                     console.log(data);
                     if(data == "SUCCESS"){
-                        layer.alert('保存成功！', {icon: 1}, function(indexOk){
-                            parent.search();
+                        layer.alert('发布成功！', {icon: 1}, function(indexOk){
                             parent.$("#add_iframe iframe").attr("src", "");
                             parent.$("div").first().show();
                             parent.$("#add_iframe").hide();
+                            layer.close(indexOk);
+                            layer.closeAll();
                             parent.layer.closeAll();
                         });
                     }else if(data == "LGINOUT"){
                         //重新登录
                         parent.window.location.href = "/logout";
                     }else{
-                        layer.alert('保存失败！', {icon: 2}, function(indexNo){
+                        layer.alert('发布失败！', {icon: 2}, function(indexNo){
+                            layer.closeAll();
                             parent.layer.closeAll();
                         });
                     }
