--- a/src/main/resources/templates/html/user/complaintList.html
+++ b/src/main/resources/templates/html/user/complaintList.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>公告管理</title>
+<title>司法管理</title>
 <link type="text/css" rel="stylesheet" th:href="@{/css/page.css}"/>
 <script type="text/javascript" th:src="@{/js/jquery/jquery-3.3.1.js}"></script>
 <!-- mmGrid -->
@@ -29,15 +29,20 @@
 	<table class="param_table" style="margin-left:10px;" >
 		<tr>
 			<td style="width:150px;">
-				<span>开始时间：</span>
-				<input type="text" id="startTime" name="startTime" class="input_0" />
+				<span>标题：</span>
+				<input type="text" id="title" name="title" class="input_0" />
 			</td>
-			<td style="width:150px;">
-				<span>结束时间：</span>
-				<input type="text" id="endTime" name="endTime" class="input_0" />
-			</td>
-			
-		
+            <td style="width:150px;">
+                <span>状态：</span>
+                 <select id="status" name="status" class="input_0">
+                     <option value="-1">全部</option>
+                    <option value="0">未处理</option>
+                    <option value="1">同意</option>
+                    <option value="2">驳回</option>
+                    <option value="3">申述</option>
+                </select>
+             </td>
+
 			<td style="">
 			<div class="layui-btn-group">
 			  <button class="layui-btn" onclick="search()">查询</button>
@@ -56,23 +61,11 @@
 </html>
 
 <script type="text/javascript">
-layui.use('laydate', function(){
-	  var laydate = layui.laydate;
-	  
-	  //执行一个laydate实例
-	  laydate.render({
-	    elem: '#startTime' //指定元素
-	  });
-	  laydate.render({
-		elem: '#endTime' //指定元素
-	 });
-});
-
 $(function(){	
 	//表格
 	$('#exampleTableUser').mmGrid({
     	root:'rows',// 和后台数据保存列一致,对应MMGridPageVoBean rows
-		url:"/ls/getAllNoticeByLimit",
+		url:"/user/complaint/getAllCompanyByLimit",
     	width: 'auto',
     	height: 'auto',
     	//checkCol: true,
@@ -82,26 +75,30 @@ $(function(){
         indexCol: true,  //索引列
         params:function(){
         	var param = new Object();
-       	
-        	param.startTime = $.trim($("#startTime").val());
-        	param.id = $.trim($("#id").val());
-        	param.endTime = $.trim($("#endTime").val());
-        
+        	param.title = $.trim($("#title").val());
+        	param.status = $.trim($("#status").val());
         	return param;
         },
         cols: [{title: 'ID', name: 'id', width:60, hidden:true},
 			   {title: '标题', name: 'title', width:50},
-			   {title: '内容', name: 'content', width:50},
-			   {title: '发布时间', name: 'creatTime', width:50, renderer:function(val, item, rowIndex){
-				   if(val){
-					   return (""+val).split(" ")[0];
-				   }
-				   return "";
-			   }},
-			  
-			   {title: '操作', name: 'id', width:80, renderer:function(val, item, rowIndex){
-				   var buttonStr = '<span class="layui-btn layui-btn-sm" onclick="editRowOne('+"\'"+item.id+"\'"+')" >修改</span>' +
-				   				   '<span class=" layui-btn layui-btn-danger layui-btn-sm" onclick="deleteRowOne('+"\'"+item.id+"\'"+')" >删除</span>';
+			   {title: '内容', name: 'content', width:120},
+			   	{title: '处理信息', name: 'processMsg', width:120},
+			    {title: '状态', name: 'status', width:40, renderer:function(val, item, rowIndex){
+			        if(val == 0){
+                          return "<span style='color:#CC9900'>未处理</span>";
+                    }
+                   if(val == 1){
+                       return "<span style='color:green'>同意</span>";
+                   }else if(val == 2){
+                       return "<span style='color:red'>驳回</span>";
+                   }else if(val == 3){
+                       return "<span style='color:blue'>申述</span>";
+                   }
+               }},
+			   {title: '创建时间', name: 'createTime', width:60},
+			   {title: '操作', name: 'id', width:40, renderer:function(val, item, rowIndex){
+				   var buttonStr =
+				   '<span class=" layui-btn layui-btn-danger layui-btn-sm" onclick="deleteRowOne('+"\'"+item.id+"\'"+')" >删除</span>';
 				   return "<div class='span_btus' >" + buttonStr + "</div>";
 			   }}
            ],
@@ -131,16 +128,12 @@ function deleteRowOne(id){
     		type:"POST",
     		async:true,  //默认true,异步
     		data:param,
-    		url:"/ls/delNotice",
+    		url:"/user/complaint/delComplaint",
     		success:function(data){
     			if(data == "SUCCESS"){
     				layer.alert('删除成功！', {icon: 1}, function(indexOk){
     					search();
     					layer.close(indexOk);
-       				});
-    			}else if(data=="DontOP"){
-    				layer.alert('删除失败！自己不能删除自己！', {icon: 2}, function(indexNo){
-       					layer.close(indexNo);
        				});
     			}else{
     				layer.alert('删除失败！', {icon: 2}, function(indexNo){
@@ -151,24 +144,13 @@ function deleteRowOne(id){
     	});
 	});
 }
-//增加用户
+//修改标签
 function addRow(){
 	layer.open({
 	    type: 2,
-	    title: '增加公告',
-	    area: ['55%', '90%'],//宽高
-	    content: '/ls/addNoticePage' //iframe的url
+	    title: '司法求助',
+	    area: ['40%', '40%'],
+	    content: '/user/complaint/addComplaint' //iframe的url
 	});
 }
-//修改标签
-function editRowOne(id){
-	layer.open({
-	    type: 2,
-	    title: '修改公告',
-	    area: ['70%', '90%'],
-	    content: '/ls/addNoticePage?id='+id //iframe的url
-	});
-}
-
-
 </script>
