--- a/src/main/resources/templates/html/user/addComplaint.html
+++ b/src/main/resources/templates/html/user/addComplaint.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>增加公告</title>
+<title>司法求助</title>
 <link type="text/css" rel="stylesheet" th:href="@{/css/page.css}" />
 <script type="text/javascript" th:src="@{/js/jquery/jquery-3.3.1.js}" ></script>
 <!-- validation -->
@@ -41,52 +41,41 @@
 </style>
 
 <script type="text/javascript"  th:inline="javascript">
-
-layui.use('laydate', function(){
-	  var laydate = layui.laydate;
-	  
-	  //执行一个laydate实例
-	  laydate.render({
-	    elem: '#birthday' //指定元素
-	  });
-	  laydate.render({
-		elem: '#entrance' //指定元素
-	 });
-});
-
-function getTime(val){
-	if(val){		
-		val = val.split("T");
-		return val[0]; 
-	}
-	return "";
-}
-	
-var manageNotice = [[${manageNotice}]];
-
-
 $(function(){
-	$(".re_password").hide();
-	
-	
-   	if(manageNotice){
-   		//修改
-   		$(".top_page_name").text("修改公告");
-   		
-   		//回填值
-   		console.log(manageNotice);
-   		$("#title").val(manageNotice.title);
-   		$("#content").val(manageNotice.content);
-   		
-   	}
-	
-	//开始验证     
-	$('form').validate({
-		
-	    submitHandler: function (){
-	    	save();
-	    }
-	});
+
+    $('form').validate({
+        debug:true,
+        /**//* 设置验证规则 */
+        rules: {
+            title: {
+                required:true
+            },
+         content: {
+                        required:true
+                    }
+        },
+        /**//* 设置错误信息 */
+        messages: {
+            title: {
+                required:"标题不可为空"
+            },
+            content: {
+                              required:"内容不可为空"
+                          }
+        },
+        /**//* 设置验证触发事件 */
+        onsubmit:true,
+        /**//* 设置错误信息提示DOM */
+        errorPlacement: function(error, element) {
+            $(element[0]).parent().find(".validation_span").text(error.html()).show();
+        },
+        success:function(error, element){
+            $(element[0]).parent().find(".validation_span").text("");
+        },
+        submitHandler: function (){
+            save();
+        }
+    });
 	
 	//返回按钮
 	$("#backBtu").click(function(){
@@ -96,28 +85,13 @@ $(function(){
 	});
 });
 
-function closeSelf(){
-    var i = layer.getFrameIndex();
-	layer.close(i);
-}
-
 //保存
 function save(){
 	var param = new Object();
 	param.title = $.trim($("#title").val());
 	param.content = $.trim($("#content").val());
-	
-	var urlStr = "/ls/addNotice";
-	
-	if(manageNotice){
-		//修改
-		param.id = manageNotice.id
-		urlStr = "/ls/updateNotice";
-		
-	}
-	if(param.title=="" || param.content==""){
-		layer.confirm('请填写必填项!', {icon: 2, title:'提示'});
-	}else{
+	console.log(param);
+	var urlStr = "/user/complaint/add";
 	
 	layer.confirm('确认保存吗？', {icon: 3, title:'提示'}, function(index){
 		$.ajax({
@@ -128,7 +102,7 @@ function save(){
     		success:function(data){
     			console.log(data);
     			if(data == "SUCCESS"){
-    				layer.alert('保存成功！', {icon: 1}, function(indexOk){
+    				layer.alert('处理成功！', {icon: 1}, function(indexOk){
        					parent.search();
        	    			parent.$("#add_iframe iframe").attr("src", "");
        			    	parent.$("div").first().show();
@@ -139,14 +113,13 @@ function save(){
     				//重新登录
     				parent.window.location.href = "/logout";    				
     			}else{
-    				layer.alert('保存失败！', {icon: 2}, function(indexNo){
+    				layer.alert('处理失败！', {icon: 2}, function(indexNo){
     					parent.layer.closeAll();
        				});
     			}
     	    }
     	});
 	});
-	}
 }
 
 </script>
@@ -157,32 +130,30 @@ function save(){
 	<div id="adListDiv" align="left" >
 	<form>
 		<table class="form_table" style="border-collapse: collapse;margin-left:20px;margin-top:10px;">
-		    <tr>
+			<tr>
 				<td align="right" >
-					<span class="need_0">*</span>
+				    <span class="need_0">*</span>
 					<span class="text_ad_0">标题：</span>
 				</td>
 				<td>
-					<input id="title" type="text" name="title" class="input_0" />
+					<input id="title" name="title" class="input_0"/>
 					<span class="validation_span"></span>
 				</td>
 			</tr>
-			<tr style="">
-				<td align="right" >
-					<span class="need_0">*</span>
-					<span class="text_ad_0">内容：</span>
-				</td>
-				<td>
-					<textarea id="content" name="content" rows="4" cols="26"></textarea>
-					
-					<span class="validation_span"></span>
-				</td>
-			</tr>
-			
+		    <tr>
+                <td align="right" >
+                    <span class="need_0">*</span>
+                    <span class="text_ad_0">内容：</span>
+                </td>
+                <td>
+                    <textarea id="content" name="content" rows="4" cols="26"></textarea>
+                    <span class="validation_span"></span>
+                </td>
+            </tr>
 			<tr>
 				<td colspan="2" align="left" >
 					<div style="margin-top:10px;margin-bottom:20px;margin-left:120px;">
-						<input type="submit" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="保存" style="" />
+						<input type="submit" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="确定" style="" />
 						<input type="button" class="layui-btn" lay-submit="" lay-filter="add" id="backBtu" name="backBtu" value="返回" style="margin-left:20px;" />
 					</div>
 				</td>
