--- a/src/main/resources/templates/html/login.html
+++ b/src/main/resources/templates/html/login.html
@@ -15,6 +15,33 @@
 input::-webkit-input-placeholder {
 	color:#fff;
 }
+
+#login2 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    padding: 13px 0;
+    background: #ffd400;
+    display: inline-block;
+    width: 50%;
+	outline:none;
+	border:2px  #FFF;
+	cursor:pointer;
+	text-transform:uppercase;
+}
+#login1 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    padding: 13px 0;
+    background: #ff3366;
+    display: inline-block;
+    width: 50%;
+	outline:none;
+	border:2px  #FFF;
+	cursor:pointer;
+	text-transform:uppercase;
+}
 </style>
 
 <script type="text/javascript">
@@ -22,9 +49,7 @@ input::-webkit-input-placeholder {
 if(window != top){
 	//session 失效 判断有没父页面，有，改变父页面地址
 	top.location.href = location.href; 
-} 
-
-
+}
 $(function(){
 	
 	$(".index_top_div").focus();
@@ -49,7 +74,6 @@ function login(){
 	if($("#param .text_first").length > 0){
 		return false;
 	}
-	
 	// 准备参数
 	var param = new Object();
 	param.username = $.trim($("#name").val());
@@ -86,6 +110,11 @@ function login(){
 	});
 }
 
+
+function regist(){
+	window.location.href = "/regist";
+}
+
 function key_down(num){
 	if(num == 13) {
 		var name = $.trim($("#name").val());
@@ -120,10 +149,9 @@ function key_down(num){
 				<input type="password"  placeholder="密码" id="password" name="password"  />
 				<div class="clear"> </div>
 			</div>
-		
 			<div class="log-bwn">
-				<input type="button"  id="login1" value="登录" onclick="login()">
-			</div>
+            	<input type="button"  id="login2" value="登录" onclick="login()"><input type="button"  id="login1" value="注册" onclick="regist()">
+            </div>
 		</form>
 	</div>
 </div>
