--- a/src/main/resources/templates/html/sa/doCompany.html
+++ b/src/main/resources/templates/html/sa/doCompany.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>司法求助</title>
+<title>处理</title>
 <link type="text/css" rel="stylesheet" th:href="@{/css/page.css}" />
 <script type="text/javascript" th:src="@{/js/jquery/jquery-3.3.1.js}" ></script>
 <!-- validation -->
@@ -41,41 +41,31 @@
 </style>
 
 <script type="text/javascript"  th:inline="javascript">
-$(function(){
 
-    $('form').validate({
-        debug:true,
-        /**//* 设置验证规则 */
-        rules: {
-            title: {
-                required:true
-            },
-         content: {
-                        required:true
-                    }
-        },
-        /**//* 设置错误信息 */
-        messages: {
-            title: {
-                required:"标题不可为空"
-            },
-            content: {
-                              required:"内容不可为空"
-                          }
-        },
-        /**//* 设置验证触发事件 */
-        onsubmit:true,
-        /**//* 设置错误信息提示DOM */
-        errorPlacement: function(error, element) {
-            $(element[0]).parent().find(".validation_span").text(error.html()).show();
-        },
-        success:function(error, element){
-            $(element[0]).parent().find(".validation_span").text("");
-        },
-        submitHandler: function (){
-            save();
-        }
-    });
+layui.use('laydate', function(){
+	  var laydate = layui.laydate;
+	  
+	  //执行一个laydate实例
+	  laydate.render({
+	    elem: '#userBirthday' //指定元素
+	  });
+});
+
+function getTime(val){
+	if(val){		
+		val = val.split("T");
+		return val[0]; 
+	}
+	return "";
+}
+	
+var cId = [[${cId}]];
+
+$(function(){
+	//返回按钮
+	$("#saveBtu").click(function(){
+		save();
+	});
 	
 	//返回按钮
 	$("#backBtu").click(function(){
@@ -85,13 +75,19 @@ $(function(){
 	});
 });
 
+function closeSelf(){
+    var i = layer.getFrameIndex();
+	layer.close(i);
+}
+
 //保存
 function save(){
 	var param = new Object();
-	param.title = $.trim($("#title").val());
-	param.content = $.trim($("#content").val());
+	param.id = cId;
+	param.processMsg = $.trim($("#msg").val());
+	param.status = $.trim($("#status").val());
 	console.log(param);
-	var urlStr = "/user/complaint/add";
+	var urlStr = "/admin/company/update";
 	
 	layer.confirm('确认保存吗？', {icon: 3, title:'提示'}, function(index){
 		$.ajax({
@@ -102,7 +98,7 @@ function save(){
     		success:function(data){
     			console.log(data);
     			if(data == "SUCCESS"){
-    				layer.alert('申请成功！', {icon: 1}, function(indexOk){
+    				layer.alert('处理成功！', {icon: 1}, function(indexOk){
        					parent.search();
        	    			parent.$("#add_iframe iframe").attr("src", "");
        			    	parent.$("div").first().show();
@@ -113,7 +109,7 @@ function save(){
     				//重新登录
     				parent.window.location.href = "/logout";    				
     			}else{
-    				layer.alert('申请失败！', {icon: 2}, function(indexNo){
+    				layer.alert('处理失败！', {icon: 2}, function(indexNo){
     					parent.layer.closeAll();
        				});
     			}
@@ -131,29 +127,20 @@ function save(){
 	<form>
 		<table class="form_table" style="border-collapse: collapse;margin-left:20px;margin-top:10px;">
 			<tr>
-				<td align="right" >
-				    <span class="need_0">*</span>
-					<span class="text_ad_0">标题：</span>
+				<td style="" align="right">
+					<span class="text_ad_0">处理类型：</span>
 				</td>
-				<td>
-					<input id="title" name="title" class="input_0"/>
-					<span class="validation_span"></span>
+				<td >
+					<select id="status" name="status" class="input_0">
+						<option value="1">通过</option>
+						<option value="2">未通过</option>
+					</select>
 				</td>
 			</tr>
-		    <tr>
-                <td align="right" >
-                    <span class="need_0">*</span>
-                    <span class="text_ad_0">内容：</span>
-                </td>
-                <td>
-                    <textarea id="content" name="content" rows="4" cols="26"></textarea>
-                    <span class="validation_span"></span>
-                </td>
-            </tr>
 			<tr>
 				<td colspan="2" align="left" >
 					<div style="margin-top:10px;margin-bottom:20px;margin-left:120px;">
-						<input type="submit" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="确定" style="" />
+						<input type="button" class="layui-btn" lay-submit="" lay-filter="add" id="saveBtu" name="saveBtu" value="确定" style="" />
 						<input type="button" class="layui-btn" lay-submit="" lay-filter="add" id="backBtu" name="backBtu" value="返回" style="margin-left:20px;" />
 					</div>
 				</td>
