--- a/src/main/resources/templates/html/user/companyList.html
+++ b/src/main/resources/templates/html/user/companyList.html
@@ -85,7 +85,7 @@ $(function(){
                      }
                  }},
 			   {title: '操作', name: 'id', width:40, renderer:function(val, item, rowIndex){
-				   var buttonStr =
+				   var buttonStr ='<span class=" layui-btn layui-btn-sm" onclick="xq('+"\'"+item.id+"\'"+')" >详情</span>' +
 				   '<span class=" layui-btn layui-btn-danger layui-btn-sm" onclick="deleteRowOne('+"\'"+item.id+"\'"+')" >删除</span>';
 				   return "<div class='span_btus' >" + buttonStr + "</div>";
 			   }}
@@ -139,6 +139,15 @@ function addRow(){
 	    title: '增加公司',
 	    area: ['60%', '40%'],
 	    content: '/company/addCompany' //iframe的url
+	});
+}
+
+function xq(id){
+	layer.open({
+	    type: 2,
+	    title: '详情',
+	    area: ['40%', '80%'],
+	    content: '/admin/company/xq?id='+id //iframe的url
 	});
 }
 </script>
