--- a/src/main/resources/templates/html/sa/complaintList.html
+++ b/src/main/resources/templates/html/sa/complaintList.html
@@ -96,7 +96,7 @@ $(function(){
                }},
 			   {title: '创建时间', name: 'createTime', width:60},
 			   {title: '操作', name: 'id', width:80, renderer:function(val, item, rowIndex){
-				   var buttonStr = '<span class=" layui-btn layui-btn-sm" onclick="doOne('+"\'"+item.id+"\'"+')" >处理</span>' +
+				   var buttonStr = '<span class=" layui-btn layui-btn-sm" onclick="xq('+"\'"+item.id+"\'"+')" >详情</span>' + '<span class=" layui-btn layui-btn-sm" onclick="doOne('+"\'"+item.id+"\'"+')" >处理</span>' +
 				   '<span class=" layui-btn layui-btn-danger layui-btn-sm" onclick="deleteRowOne('+"\'"+item.id+"\'"+')" >删除</span>';
 				   return "<div class='span_btus' >" + buttonStr + "</div>";
 			   }}
@@ -150,6 +150,15 @@ function doOne(id){
 	    title: '处理意见',
 	    area: ['40%', '40%'],
 	    content: '/admin/complaint/doComplaint?id='+id //iframe的url
+	});
+}
+
+function xq(id){
+	layer.open({
+	    type: 2,
+	    title: '详情',
+	    area: ['40%', '80%'],
+	    content: '/admin/complaint/xq?id='+id //iframe的url
 	});
 }
 </script>
