新闻详情页面

--- a/src/main/resources/templates/html/sa/word.html
+++ b/src/main/resources/templates/html/sa/word.html
@@ -72,9 +72,8 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
             </td>
             <td>
                 <select id="type" name="type" class="input_0">
-                    <option value="11">国家政策</option>
-                    <option value="12">省市政策</option>
-                    <option value="13">园区政策</option>
+                    <option value="15">普通新闻</option>
+                    <option value="16">招商项目结果公示</option>
                 </select>
             </td>
         </tr>
