公司联系方式

--- a/src/main/resources/templates/html/sa/companyList.html
+++ b/src/main/resources/templates/html/sa/companyList.html
@@ -82,6 +82,7 @@ $(function(){
 			   {title: '公司名', name: 'name', width:80},
 			   {title: '法人', name: 'legalPerson', width:30},
 			   {title: '注册资金', name: 'money', width:30},
+			   {title: '电话', name: 'phone', width:50},
 			   {title: '地址', name: 'address', width:100},
 			   {title: '简介', name: 'content', width:120},
 			   {title: '创建时间', name: 'createTime', width:60},
