--- a/src/main/resources/templates/html/user/companyList.html
+++ b/src/main/resources/templates/html/user/companyList.html
@@ -70,6 +70,7 @@ $(function(){
         cols: [{title: 'ID', name: 'id', width:60, hidden:true},
 			   {title: '公司名', name: 'name', width:100},
 			   {title: '法人', name: 'legalPerson', width:50},
+			   {title: '电话', name: 'phone', width:50},
 			   {title: '注册资金', name: 'money', width:50},
 			   {title: '地址', name: 'address', width:120},
 			   {title: '简介', name: 'content', width:120},
