--- a/src/main/resources/templates/html/user/addCompany.html
+++ b/src/main/resources/templates/html/user/addCompany.html
@@ -49,7 +49,9 @@ $(function(){
         rules: {
             name: {
                 required:true
-            },
+            }, phone: {
+                              required:true
+                          },
         legalPerson: {
                 required:true
             },
@@ -68,6 +70,9 @@ $(function(){
             name: {
                 required:"公司名不可为空"
             },
+             phone: {
+                            required:"联系电话不可为空"
+                        },
              legalPerson: {
                             required:"法人不可为空"
                         },
@@ -110,6 +115,7 @@ function save(){
 	param.legalPerson = $.trim($("#legalPerson").val());
 	param.address = $.trim($("#address").val());
 	param.money = $.trim($("#money").val());
+	param.phone = $.trim($("#phone").val());
 	param.content = $.trim($("#content").val());
 	console.log(param);
 	var urlStr = "/company/add";
@@ -168,6 +174,16 @@ function save(){
                 </td>
                 <td>
                     <input id="legalPerson" name="legalPerson" class="input_0"/>
+                    <span class="validation_span"></span>
+                </td>
+            </tr>
+            <tr>
+                <td align="right" >
+                    <span class="need_0">*</span>
+                    <span class="text_ad_0">联系电话：</span>
+                </td>
+                <td>
+                    <input id="phone" name="phone" class="input_0"/>
                     <span class="validation_span"></span>
                 </td>
             </tr>
